redux setup & install documentation added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
+    <meta property="og:image" content="https://ibb.co/ZzRWKPzL.png" />
+    <meta
+      property="og:title"
+      content="dotTxT - Chaotic, Public and Temporary!"
+    />
+    <meta
+      property="og:description"
+      content="Chat freely with friends and strangers alike, in this public chat."
+    />
+    <meta property="og:url" content="https://dottxt-5993e.firebaseapp.com/" />
+    <meta property="og:type" content="website" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
